1.0.0
-----
 * Import Queue pendingImports metrics is reporting an incorrect value (CASSANDRASC-125)
 * Add missing method to retrieve the InetSocketAddress to DriverUtils (CASSANDRASC-123)
 * Reduce filesystem calls while streaming SSTables (CASSANDRASC-94)
 * Record existing and additional metrics with dropwizard (CASSANDRASC-117)
 * Support sending json request (CASSANDRASC-118)
 * Add FilteringMetricRegistry to allow filtering of metrics (CASSANDRASC-115)
 * Allow for JmxClient to be extensible (CASSANDRASC-116)
 * Improve observability in Sidecar (CASSANDRASC-111)
 * Improve logging for slice restore task (CASSANDRASC-107)
 * Add restore task watcher to report long running tasks (CASSANDRASC-106)
 * RestoreSliceTask could be stuck due to missing exception handling (CASSANDRASC-105)
 * Make hash algorithm implementation pluggable (CASSANDRASC-114)
 * Fix ClosedChannelException when downloading from S3 (CASSANDRASC-112)
 * Fix NPE thrown when getting StorageClient from pool (CASSANDRASC-110)
 * Relocate Sidecar common classes in vertx-client-shaded (CASSANDRASC-104)
 * Automated yaml type binding for deserialization (CASSANDRASC-103)
 * Upgrade Vert.x version in Sidecar to 4.5 (CASSANDRASC-101)
 * Break restore job into stage and import phases and persist restore slice status on phase completion (CASSANDRASC-99)
 * Improve logging for traffic shaping / rate limiting configuration (CASSANDRASC-98)
 * Startup Validation Failures when Checking Sidecar Connectivity (CASSANDRASC-86)
 * Add support for additional digest validation during SSTable upload (CASSANDRASC-97)
 * Add sidecar client changes for restore from S3 (CASSANDRASC-95)
 * Add restore SSTables from S3 into Cassandra feature to Cassandra Sidecar (CASSANDRASC-92)
 * Define routing order for http routes (CASSANDRASC-93)
 * AbstractHandler is handling the request even when it fails to extract params (CASSANDRASC-91)